pihole/pihole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
  - name: pihole-admin
    port: 8000
    targetPort: 80
  - name: dns-tcp
    port: 53
    targetPort: 53
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
  externalIPs:
  - 192.168.0.240
