pihole/pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pihole
  name: pihole-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.192.168.0.240.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pihole
            port:
              number: 8000
